# dimer_calculations

./: .gitignore  Functions.py  G17.py  LICENSE  README.md  Structure_name.py  WaaF_1.py  cage.py  cg_test.py  dimer_calculations.ipynb  justfile  make_dimers_examples.ipynb  make_maes.py  pyproject.toml  requirements.txt  setup.py  test.py  utils.py  xyz_to_inp.py
cages/: CC1.mol  truncated_octahedron_MM.mol
dimer_calc/: Functions.py  Optimiser_functions.py  __init__.py  axes.py  cage.py  collect_lowest.py  config.py  dimer_centroids.py  optimiser_functions.py  pores.py  read_energies_catenated_single.py  utils.py
dimer_calculations/: Optimiser_functions.py  __init__.py  axes.py  cage.py  collect_lowest.py  config.py  dimer_centroids.py  dimer_generator.py  optimiser_functions.py  pores.py  read_energies_catenated_single.py  utils.py  xyz_to_inp.py
dimer_calculations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example_scripts/: G17.py
example_scripts/cages/: G_17.mol  WaaF_1_xtbopt.mol
scripts/: cg_test.py  test.py
tests/: test_dimer_calculations.py
